--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Banki</title>
+    <script src="https://webspace.run"></script>
+</head>
+<body>
+    <h1>Welcome to Banki!</h1>
+    <h3>All included experiences are to purely demonstrate the capabilities and usecases of banki</h3>
+</body>
+</html>
