Update Webspace world Banki

--- a/index.html
+++ b/index.html
@@ -1,14 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Banki</title>
     <script src="https://webspace.run"></script>
-</head>
-<body>
-    <h1>Welcome to Banki!</h1>
-    <h3>All included experiences are to purely demonstrate the capabilities and usecases of banki</h3>
-</body>
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="theme-color" content="black" />
+    <style>
+      body * {
+        display: none;
+      }
+      body {
+        margin: 0;
+        overflow: hidden;
+        background-color: #061139;
+      }
+    </style>
+    <meta name="webspace.keys.owner" content="eyJjcnYiOiJQLTI1NiIsImV4dCI6dHJ1ZSwia2V5X29wcyI6WyJ2ZXJpZnkiXSwia3R5IjoiRUMiLCJ4IjoiVy1zY2pQbVByME12Nm0wYXpEMG5zVzBLLUd0b2NtSDF4MU9kRGdKcnFOOCIsInkiOiIwakM2N2diY2F1d1B3VzB0TmI5Z2ZmRHBtS0pJRHNhNEFobkRIV0RRQ0c0IiwiaHViX2lkIjoiMjFQVjJRZUZIRnFpd2tEVCJ9" />
+  </head>
+  <img class="safum-vpn-status" id="ncpkioolbefiinmbflfglojjabaipegg-img" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" />
+  <body>
+    <h1 id="rxyjvgr" draggable="">Welcome to Banki!</h1>
+    <h3 id="kjqe3dg" draggable="">All included experiences are to purely demonstrate the capabilities and usecases of banki</h3>
+
+  </body>
 </html>
