Update Webspace world Banki

--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     <h1 id="rxyjvgr" draggable="">Welcome to Banki!</h1>
     <h3 id="kjqe3dg" draggable="">All included experiences are to purely demonstrate the capabilities and usecases of banki</h3>
 
+    <model id="ffjsco4" type="model/vnd.svox" src="https://arceusmaxis.github.io/banki/assets/poopy.svox" draggable="" style="transform: translate3d(303cm, 470cm, -104cm) rotate3d(0.070, 0.861, 0.503, 3.380rad); "></model>
   </body>
 </html>
