Update Webspace world Banki

--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
       }
     </style>
     <meta name="webspace.keys.owner" content="eyJjcnYiOiJQLTI1NiIsImV4dCI6dHJ1ZSwia2V5X29wcyI6WyJ2ZXJpZnkiXSwia3R5IjoiRUMiLCJ4IjoiVy1zY2pQbVByME12Nm0wYXpEMG5zVzBLLUd0b2NtSDF4MU9kRGdKcnFOOCIsInkiOiIwakM2N2diY2F1d1B3VzB0TmI5Z2ZmRHBtS0pJRHNhNEFobkRIV0RRQ0c0IiwiaHViX2lkIjoiMjFQVjJRZUZIRnFpd2tEVCJ9" />
+    <meta name="webspace.environment.type" content="terrain" />
+    <meta name="webspace.environment.terrain.colors.ground" content="#B0E580" />
+    <meta name="webspace.environment.terrain.colors.edge" content="#BA9384" />
+    <meta name="webspace.environment.terrain.colors.leaves" content="#C2DB5C" />
+    <meta name="webspace.environment.terrain.colors.bark" content="#BF824E" />
+    <meta name="webspace.environment.terrain.colors.rock" content="#8B8B8B" />
+    <meta name="webspace.environment.terrain.colors.grass" content="#ACE24F" />
+    <meta name="webspace.environment.terrain.colors.sky" content="#83CCE2" />
+    <meta name="webspace.environment.terrain.colors.water" content="#A39EE7" />
+    <meta name="webspace.environment.terrain.type" content="islands" />
+    <meta name="webspace.environment.terrain.seed" content="7" />
   </head>
   <img class="safum-vpn-status" id="ncpkioolbefiinmbflfglojjabaipegg-img" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" />
   <body>
