--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <meta name="webspace.environment.terrain.colors.grass" content="#ACE24F" />
     <meta name="webspace.environment.terrain.colors.sky" content="#83CCE2" />
     <meta name="webspace.environment.terrain.colors.water" content="#A39EE7" />
-    <meta name="webspace.environment.terrain.type" content="islands" />
+    <meta name="webspace.environment.terrain.type" content="flat" />
     <meta name="webspace.environment.terrain.seed" content="7" />
   </head>
   <img class="safum-vpn-status" id="ncpkioolbefiinmbflfglojjabaipegg-img" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" />
