--- a/index.html
+++ b/index.html
@@ -35,5 +35,10 @@
     <h1 id="rxyjvgr" draggable="">Welcome to Banki!</h1>
     <h3 id="kjqe3dg" draggable="">All included experiences are to purely demonstrate the capabilities and usecases of banki</h3>
 
+    <label id="ls4u6kz" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(68cm, 340cm, -2511cm) rotate3d(-0.120, -0.992, -0.027, 0.404rad); ">
+      <h1>Welcome to Banki!</h1>
+    </label><label id="cccygb1" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(-121cm, 320cm, -2568cm) rotate3d(-0.786, -0.618, -0.014, 0.166rad); ">
+      <h1>Grievance Addressal</h1>
+    </label>
   </body>
 </html>
