Update Webspace world Banki

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     <meta name="webspace.environment.terrain.colors.water" content="#A39EE7" />
     <meta name="webspace.environment.terrain.type" content="flat" />
     <meta name="webspace.environment.terrain.seed" content="7" />
+    <meta name="webspace.environment.spawn_point.transform" content="translate3d(-63cm, 75cm, -2246cm) rotate3d(-0.032, -0.999, -0.006, 0.383rad)" />
+    <meta name="webspace.environment.spawn_point.radius" content="10" />
   </head>
   <img class="safum-vpn-status" id="ncpkioolbefiinmbflfglojjabaipegg-img" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" />
   <body>
