--- a/index.html
+++ b/index.html
@@ -30,11 +30,8 @@
     <meta name="webspace.environment.terrain.colors.water" content="#A39EE7" />
     <meta name="webspace.environment.terrain.type" content="flat" />
     <meta name="webspace.environment.terrain.seed" content="7" />
-    <meta name="webspace.environment.spawn_point.transform" content="translate3d(-63cm, 75cm, -2246cm) rotate3d(-0.032, -0.999, -0.006, 0.383rad)" />
-    <meta name="webspace.environment.spawn_point.radius" content="10" />
   </head>
-  <img class="safum-vpn-status" id="ncpkioolbefiinmbflfglojjabaipegg-img" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" />
-  <body>
+  <body><img class="safum-vpn-status" id="5rvktjh" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" draggable="" loading="lazy" style="transform: translate3d(62cm, 227cm, -2750cm) rotate3d(-0.524, 0.850, 0.057, 0.255rad); " />
     <h1 id="rxyjvgr" draggable="">Welcome to Banki!</h1>
     <h3 id="kjqe3dg" draggable="">All included experiences are to purely demonstrate the capabilities and usecases of banki</h3>
     <label id="ls4u6kz" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(68cm, 340cm, -2511cm) rotate3d(-0.120, -0.992, -0.027, 0.404rad); ">
@@ -42,7 +39,7 @@
     </label><label id="cccygb1" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(-121cm, 320cm, -2568cm) rotate3d(-0.786, -0.618, -0.014, 0.166rad); ">
       <h1>Grievance Addressal</h1>
     </label>
-    <label id="a3ykkgc" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; transform: translate3d(190cm, 320cm, -2421cm) rotate3d(-0.026, -0.999, -0.026, 1.086rad); ">
+    <label id="a3ykkgc" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(212cm, 311cm, -2418cm) rotate3d(0.191, -0.980, 0.054, 1.734rad); ">
       <h1>Transactions</h1>
     </label>
   </body>
