Update Webspace world Banki

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <meta name="webspace.environment.spawn_point.transform" content="translate3d(-63cm, 75cm, -2246cm) rotate3d(-0.032, -0.999, -0.006, 0.383rad)" />
     <meta name="webspace.environment.spawn_point.radius" content="10" />
   </head>
+  <img class="safum-vpn-status" id="ncpkioolbefiinmbflfglojjabaipegg-img" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" />
   <body>
     <h1 id="rxyjvgr" draggable="">Welcome to Banki!</h1>
     <h3 id="kjqe3dg" draggable="">All included experiences are to purely demonstrate the capabilities and usecases of banki</h3>
