Update Webspace world Banki

--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
     <label id="a3ykkgc" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(190cm, 320cm, -2421cm) rotate3d(-0.026, -0.999, -0.026, 1.086rad); ">
       <h1>Transactions</h1>
     </label>
+    <model id="gy7t7k2" type="model/vnd.svox" src="https://arceusmaxis.github.io/banki/assets/wall.svox" draggable="" style="transform: translate3d(52cm, 175cm, -2443cm) rotate3d(-0.430, -0.896, -0.110, 0.558rad); "></model>
   </body>
 </html>
