--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <meta name="webspace.environment.spawn_point.transform" content="translate3d(-63cm, 75cm, -2246cm) rotate3d(-0.032, -0.999, -0.006, 0.383rad)" />
     <meta name="webspace.environment.spawn_point.radius" content="10" />
   </head>
-  <body><img class="safum-vpn-status" id="5rvktjh" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" draggable="" style="transform: translate3d(42cm, 258cm, -2448cm) rotate3d(0.016, -1.000, 0.003, 0.399rad); " loading="lazy" />
+  <body>
     <h1 id="rxyjvgr" draggable="">Welcome to Banki!</h1>
     <h3 id="kjqe3dg" draggable="">All included experiences are to purely demonstrate the capabilities and usecases of banki</h3>
     <label id="ls4u6kz" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(68cm, 340cm, -2511cm) rotate3d(-0.120, -0.992, -0.027, 0.404rad); ">
@@ -44,6 +44,6 @@
     <label id="a3ykkgc" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(190cm, 320cm, -2421cm) rotate3d(-0.026, -0.999, -0.026, 1.086rad); ">
       <h1>Transactions</h1>
     </label>
-    <model id="gy7t7k2" type="model/vnd.svox" src="https://arceusmaxis.github.io/banki/assets/wall.svox" draggable="" style="transform: translate3d(52cm, 175cm, -2443cm) rotate3d(-0.430, -0.896, -0.110, 0.558rad); "></model>
+
   </body>
 </html>
