Update Webspace world Banki

--- a/index.html
+++ b/index.html
@@ -45,5 +45,6 @@
       <h1>Transactions</h1>
     </label>
 
+    <model id="oqc1n4q" type="model/vnd.svox" src="assets/wall-361716.svox" draggable="" style="transform: translate3d(102cm, 220cm, -2509cm) rotate3d(-0.120, -0.992, -0.029, 0.478rad); "></model>
   </body>
 </html>
