Update Webspace world Banki

--- a/index.html
+++ b/index.html
@@ -45,6 +45,6 @@
       <h1>Transactions</h1>
     </label>
 
-    <model id="oqc1n4q" type="model/vnd.svox" src="assets/wall-361716.svox" draggable="" style="transform: translate3d(102cm, 220cm, -2509cm) rotate3d(-0.181, -0.982, -0.044, 0.491rad); "></model>
+    <model id="oqc1n4q" type="model/vnd.svox" src="assets/wall-361716.svox" draggable="" style="transform: translate3d(102cm, 220cm, -2509cm); "></model>
   </body>
 </html>
