--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <meta name="webspace.environment.spawn_point.transform" content="translate3d(-63cm, 75cm, -2246cm) rotate3d(-0.032, -0.999, -0.006, 0.383rad)" />
     <meta name="webspace.environment.spawn_point.radius" content="10" />
   </head>
+  <img class="safum-vpn-status" id="ncpkioolbefiinmbflfglojjabaipegg-img" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" />
   <body>
     <h1 id="rxyjvgr" draggable="">Welcome to Banki!</h1>
     <h3 id="kjqe3dg" draggable="">All included experiences are to purely demonstrate the capabilities and usecases of banki</h3>
@@ -44,7 +45,6 @@
     <label id="a3ykkgc" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(190cm, 320cm, -2421cm) rotate3d(-0.026, -0.999, -0.026, 1.086rad); ">
       <h1>Transactions</h1>
     </label>
-
-    <model id="oqc1n4q" type="model/vnd.svox" src="assets/wall-361716.svox" draggable="" style="transform: translate3d(102cm, 220cm, -2509cm); "></model>
+    <model id="oqc1n4q" type="model/vnd.svox" src="assets/wall-361716.svox" draggable="" style="transform: translate3d(102cm, 220cm, -2509cm) rotate3d(-0.120, -0.992, -0.029, 0.478rad); "></model>
   </body>
 </html>
