Update Webspace world Banki

--- a/index.html
+++ b/index.html
@@ -46,5 +46,7 @@
       <h1>Transactions</h1>
     </label>
     <model id="oqc1n4q" type="model/vnd.svox" src="assets/wall-361716.svox" draggable="" style="transform: translate3d(102cm, 220cm, -2509cm) rotate3d(0.122, 0.992, -0.003, 0.050rad); "></model>
+    <model id="c1nbniu" type="model/vnd.svox" src="https://arceusmaxis.github.io/banki/assets/untitled-241893.svox" draggable="" style="transform: translate3d(66cm, 230cm, -2408cm) rotate3d(-0.198, -0.980, -0.010, 0.106rad) scale3d(0.05, 0.05, 0.05); "></model>
+    <model id="pncelue" type="model/vnd.svox" src="https://arceusmaxis.github.io/banki/assets/wall-848032.svox" draggable="" style="transform: translate3d(66cm, 230cm, -2408cm) rotate3d(-0.198, -0.980, -0.010, 0.106rad) scale3d(0.05, 0.05, 0.05); "></model>
   </body>
 </html>
