--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
   <body><img class="safum-vpn-status" id="5rvktjh" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" draggable="" style="transform: translate3d(91cm, 259cm, -2502cm) rotate3d(0.105, -0.994, 0.006, 0.120rad); " loading="lazy" />
     <h1 id="rxyjvgr" draggable="">Welcome to Banki!</h1>
     <h3 id="kjqe3dg" draggable="">All included experiences are to purely demonstrate the capabilities and usecases of banki</h3>
-    <label id="ls4u6kz" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(68cm, 340cm, -2511cm) rotate3d(-0.120, -0.992, -0.027, 0.404rad); ">
+    <label id="ls4u6kz" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(68cm, 340cm, -2511cm) rotate3d(-0.902, -0.163, -0.400, 0.050rad); ">
       <h1>Welcome to Banki!</h1>
     </label><label id="cccygb1" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(-121cm, 320cm, -2568cm) rotate3d(-0.786, -0.618, -0.014, 0.166rad); ">
       <h1>Grievance Addressal</h1>
     </label>
-    <label id="a3ykkgc" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(190cm, 320cm, -2421cm) rotate3d(-0.026, -0.999, -0.026, 1.086rad); ">
+    <label id="a3ykkgc" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; transform: translate3d(190cm, 320cm, -2421cm) rotate3d(-0.026, -0.999, -0.026, 1.086rad); ">
       <h1>Transactions</h1>
     </label>
     <model id="oqc1n4q" type="model/vnd.svox" src="assets/wall-361716.svox" draggable="" style="transform: translate3d(102cm, 220cm, -2509cm) rotate3d(0.122, 0.992, -0.003, 0.050rad); "></model>
