--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
- 0<!DOCTYPE html>
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Banki</title>
-    <script src="https://webspace.run"></script>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="theme-color" content="black" />
-    <style>
+    <title>Unnamed World</title>
+  </head><img class="safum-vpn-status" id="ncpkioolbefiinmbflfglojjabaipegg-img" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" />
+  <body>0
+
+    <meta charset="UTF-8" id="lwwcepw" draggable="" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" id="198ubdy" draggable="" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" id="gxf7as3" draggable="" />
+    <title id="ksxgc8s" draggable="">Banki</title>
+    <script src="https://webspace.run" id="oswo888" draggable=""></script>
+    <meta name="mobile-web-app-capable" content="yes" id="ae7pmz4" draggable="" />
+    <meta name="theme-color" content="black" id="y4ilcl7" draggable="" />
+    <style id="aulnszl" draggable="">
       body * {
         display: none;
       }
@@ -18,22 +26,21 @@
         background-color: #061139;
       }
     </style>
-    <meta name="webspace.keys.owner" content="eyJjcnYiOiJQLTI1NiIsImV4dCI6dHJ1ZSwia2V5X29wcyI6WyJ2ZXJpZnkiXSwia3R5IjoiRUMiLCJ4IjoiVy1zY2pQbVByME12Nm0wYXpEMG5zVzBLLUd0b2NtSDF4MU9kRGdKcnFOOCIsInkiOiIwakM2N2diY2F1d1B3VzB0TmI5Z2ZmRHBtS0pJRHNhNEFobkRIV0RRQ0c0IiwiaHViX2lkIjoiMjFQVjJRZUZIRnFpd2tEVCJ9" />
-    <meta name="webspace.environment.type" content="terrain" />
-    <meta name="webspace.environment.terrain.colors.ground" content="#B0E580" />
-    <meta name="webspace.environment.terrain.colors.edge" content="#BA9384" />
-    <meta name="webspace.environment.terrain.colors.leaves" content="#C2DB5C" />
-    <meta name="webspace.environment.terrain.colors.bark" content="#BF824E" />
-    <meta name="webspace.environment.terrain.colors.rock" content="#8B8B8B" />
-    <meta name="webspace.environment.terrain.colors.grass" content="#ACE24F" />
-    <meta name="webspace.environment.terrain.colors.sky" content="#83CCE2" />
-    <meta name="webspace.environment.terrain.colors.water" content="#A39EE7" />
-    <meta name="webspace.environment.terrain.type" content="flat" />
-    <meta name="webspace.environment.terrain.seed" content="7" />
-    <meta name="webspace.environment.spawn_point.transform" content="translate3d(40cm, 75cm, -2159cm) rotate3d(-0.198, -0.980, -0.010, 0.106rad)" />
-    <meta name="webspace.environment.spawn_point.radius" content="0" />
-  </head>
-  <body><img class="safum-vpn-status" id="5rvktjh" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" draggable="" style="transform: translate3d(91cm, 259cm, -2502cm) rotate3d(0.105, -0.994, 0.006, 0.120rad); " loading="lazy" />
+    <meta name="webspace.keys.owner" content="eyJjcnYiOiJQLTI1NiIsImV4dCI6dHJ1ZSwia2V5X29wcyI6WyJ2ZXJpZnkiXSwia3R5IjoiRUMiLCJ4IjoiVy1zY2pQbVByME12Nm0wYXpEMG5zVzBLLUd0b2NtSDF4MU9kRGdKcnFOOCIsInkiOiIwakM2N2diY2F1d1B3VzB0TmI5Z2ZmRHBtS0pJRHNhNEFobkRIV0RRQ0c0IiwiaHViX2lkIjoiMjFQVjJRZUZIRnFpd2tEVCJ9" id="rtjb5sr" draggable="" />
+    <meta name="webspace.environment.type" content="terrain" id="fsicktt" draggable="" />
+    <meta name="webspace.environment.terrain.colors.ground" content="#B0E580" id="ya4xprc" draggable="" />
+    <meta name="webspace.environment.terrain.colors.edge" content="#BA9384" id="q9rw4vx" draggable="" />
+    <meta name="webspace.environment.terrain.colors.leaves" content="#C2DB5C" id="1uyzpvm" draggable="" />
+    <meta name="webspace.environment.terrain.colors.bark" content="#BF824E" id="pxxfqae" draggable="" />
+    <meta name="webspace.environment.terrain.colors.rock" content="#8B8B8B" id="ekkdbgl" draggable="" />
+    <meta name="webspace.environment.terrain.colors.grass" content="#ACE24F" id="6mlaejj" draggable="" />
+    <meta name="webspace.environment.terrain.colors.sky" content="#83CCE2" id="8vt72sh" draggable="" />
+    <meta name="webspace.environment.terrain.colors.water" content="#A39EE7" id="3g64dya" draggable="" />
+    <meta name="webspace.environment.terrain.type" content="flat" id="igvdtvy" draggable="" />
+    <meta name="webspace.environment.terrain.seed" content="7" id="dhydhao" draggable="" />
+    <meta name="webspace.environment.spawn_point.transform" content="translate3d(40cm, 75cm, -2159cm) rotate3d(-0.198, -0.980, -0.010, 0.106rad)" id="s9xzd0i" draggable="" />
+    <meta name="webspace.environment.spawn_point.radius" content="0" id="dwxj6rl" draggable="" />
+    <img class="safum-vpn-status" id="5rvktjh" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" draggable="" style="" loading="lazy" />
     <h1 id="rxyjvgr" draggable="">Welcome to Banki!</h1>
     <h3 id="kjqe3dg" draggable="">All included experiences are to purely demonstrate the capabilities and usecases of banki</h3>
     <label id="ls4u6kz" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(68cm, 340cm, -2511cm) rotate3d( 0,  0,  0, 0rad); ">
@@ -41,7 +48,7 @@
     </label><label id="cccygb1" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(-121cm, 320cm, -2568cm) rotate3d( 0,  0,  0, 0rad); ">
       <h1>Grievance Addressal</h1>
     </label>
-    <label id="a3ykkgc" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; transform: translate3d(211cm, 318cm, -2450cm) rotate3d( 0,  0,  0, 0rad); ">
+    <label id="a3ykkgc" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(211cm, 318cm, -2450cm) rotate3d( 0,  0,  0, 0rad); ">
       <h1>Transactions</h1>
     </label>
     <model id="oqc1n4q" type="model/vnd.svox" src="assets/wall-361716.svox" draggable="" style="transform: translate3d(102cm, 220cm, -2509cm) rotate3d(0.122, 0.992, -0.003, 0.050rad); "></model>
