Update Webspace world Banki Lobby

--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="theme-color" content="black" />
-    <title>Unnamed World</title>
+    <title>Banki Lobby</title>
+    <meta name="webspace.environment.type" content="terrain" />
+    <meta name="webspace.environment.terrain.colors.ground" content="#152D01" />
+    <meta name="webspace.environment.terrain.colors.edge" content="#082300" />
+    <meta name="webspace.environment.terrain.colors.leaves" content="#748E08" />
+    <meta name="webspace.environment.terrain.colors.bark" content="#2F2014" />
+    <meta name="webspace.environment.terrain.colors.rock" content="#938465" />
+    <meta name="webspace.environment.terrain.colors.grass" content="#60A200" />
+    <meta name="webspace.environment.terrain.colors.sky" content="#6E85C8" />
+    <meta name="webspace.environment.terrain.colors.water" content="#080170" />
+    <meta name="webspace.environment.terrain.type" content="plains" />
+    <meta name="webspace.environment.terrain.seed" content="7" />
   </head><img class="safum-vpn-status" id="ncpkioolbefiinmbflfglojjabaipegg-img" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" />
   <body>0
 
