--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </label><label id="cccygb1" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(-121cm, 320cm, -2568cm) rotate3d( 0,  0,  0, 0rad); ">
       <h1>Grievance Addressal</h1>
     </label>
-    <label id="a3ykkgc" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(188cm, 335cm, -2525cm) rotate3d(0.856, 0.041, -0.515, 0.264rad); ">
+    <label id="a3ykkgc" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; transform: translate3d(227cm, 310cm, -2519cm) rotate3d(0.898, -0.440, -0.005, 0.259rad); ">
       <h1>Transactions</h1>
     </label>
     <model id="oqc1n4q" type="model/vnd.svox" src="assets/wall-361716.svox" draggable="" style="transform: translate3d(102cm, 220cm, -2509cm) rotate3d(0.122, 0.992, -0.003, 0.050rad); "></model>
