--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <meta name="webspace.environment.terrain.colors.water" content="#080170" />
     <meta name="webspace.environment.terrain.type" content="plains" />
     <meta name="webspace.environment.terrain.seed" content="7" />
-  </head><img class="safum-vpn-status" id="ncpkioolbefiinmbflfglojjabaipegg-img" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" />
-  <body>0
-
+  </head>
+  <body>
+    0
     <meta charset="UTF-8" id="lwwcepw" draggable="" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" id="198ubdy" draggable="" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" id="gxf7as3" draggable="" />
@@ -51,7 +51,6 @@
     <meta name="webspace.environment.terrain.seed" content="7" id="dhydhao" draggable="" />
     <meta name="webspace.environment.spawn_point.transform" content="translate3d(40cm, 75cm, -2159cm) rotate3d(-0.198, -0.980, -0.010, 0.106rad)" id="s9xzd0i" draggable="" />
     <meta name="webspace.environment.spawn_point.radius" content="0" id="dwxj6rl" draggable="" />
-    <img class="safum-vpn-status" id="5rvktjh" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" draggable="" style="" loading="lazy" />
     <h1 id="rxyjvgr" draggable="">Welcome to Banki!</h1>
     <h3 id="kjqe3dg" draggable="">All included experiences are to purely demonstrate the capabilities and usecases of banki</h3>
     <label id="ls4u6kz" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(68cm, 340cm, -2511cm) rotate3d( 0,  0,  0, 0rad); ">
@@ -59,7 +58,7 @@
     </label><label id="cccygb1" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(-121cm, 320cm, -2568cm) rotate3d( 0,  0,  0, 0rad); ">
       <h1>Grievance Addressal</h1>
     </label>
-    <label id="a3ykkgc" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; transform: translate3d(227cm, 310cm, -2519cm) rotate3d(0.898, -0.440, -0.005, 0.259rad); ">
+    <label id="a3ykkgc" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(188cm, 335cm, -2525cm) rotate3d(0.856, 0.041, -0.515, 0.264rad); ">
       <h1>Transactions</h1>
     </label>
     <model id="oqc1n4q" type="model/vnd.svox" src="assets/wall-361716.svox" draggable="" style="transform: translate3d(102cm, 220cm, -2509cm) rotate3d(0.122, 0.992, -0.003, 0.050rad); "></model>
