--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <meta name="webspace.environment.terrain.type" content="plains" />
     <meta name="webspace.environment.terrain.seed" content="7" />
   </head>
-  <img class="safum-vpn-status" id="ncpkioolbefiinmbflfglojjabaipegg-img" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" />
-  <body><img class="safum-vpn-status" id="5rvktjh" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" draggable="" style="" loading="lazy" />
+  <body><img class="safum-vpn-status" id="5rvktjh" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" draggable="" style="transform: translate3d(41cm, 240cm, -2219cm) rotate3d(-0.872, -0.490, -0.016, 0.077rad); " loading="lazy" />
+    <img class="safum-vpn-status" id="0pos2da" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" draggable="" style="transform: translate3d(41cm, 240cm, -2219cm) rotate3d(-0.872, -0.490, -0.016, 0.077rad); " loading="lazy" />
     0
     <meta charset="UTF-8" id="lwwcepw" draggable="" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" id="198ubdy" draggable="" />
@@ -52,7 +52,7 @@
     <meta name="webspace.environment.terrain.seed" content="7" id="dhydhao" draggable="" />
     <meta name="webspace.environment.spawn_point.transform" content="translate3d(40cm, 75cm, -2159cm) rotate3d(-0.198, -0.980, -0.010, 0.106rad)" id="s9xzd0i" draggable="" />
     <meta name="webspace.environment.spawn_point.radius" content="0" id="dwxj6rl" draggable="" />
-    <img class="safum-vpn-status" id="hpbuh5l" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" draggable="" style="" loading="lazy" />
+    <img class="safum-vpn-status" id="hpbuh5l" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" draggable="" style="transform: translate3d(41cm, 240cm, -2219cm) rotate3d(-0.872, -0.490, -0.016, 0.077rad); " loading="lazy" />
     <h1 id="rxyjvgr" draggable="">Welcome to Banki!</h1>
     <h3 id="kjqe3dg" draggable="">All included experiences are to purely demonstrate the capabilities and usecases of banki</h3>
     <label id="ls4u6kz" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: rgba(255, 255, 255, 0); font-family: sans-serif; transform: translate3d(68cm, 340cm, -2511cm) rotate3d( 0,  0,  0, 0rad); ">
