--- a/index.html
+++ b/index.html
@@ -61,5 +61,6 @@
     </label>
     <model id="oqc1n4q" type="model/vnd.svox" src="assets/wall-361716.svox" draggable="" style="transform: translate3d(102cm, 220cm, -2509cm) rotate3d(0,0,0,0rad); "></model>
 
+    <model id="pup1iws" type="model/vnd.svox" src="assets/wallback-75429.svox" draggable="" style="transform: translate3d(85cm, 224cm, -1900cm) rotate3d(-0.000, 1.000, 0.022, 3.113rad); "></model>
   </body>
 </html>
