Update Webspace world Banki Lobby

--- a/index.html
+++ b/index.html
@@ -62,5 +62,6 @@
     <model id="oqc1n4q" type="model/vnd.svox" src="assets/wall-361716.svox" draggable="" style="transform: translate3d(102cm, 220cm, -2509cm) rotate3d(0,0,0,0rad); "></model>
 
     <model id="pup1iws" type="model/vnd.svox" src="assets/wallback-75429.svox" draggable="" style="transform: translate3d(85cm, 224cm, -1900cm) rotate3d(-0.000, 1.000, 0.022, 3.113rad); "></model>
+    <model id="f2gla6x" type="model/vnd.svox" src="assets/wallback-67218.svox" draggable="" style="transform: translate3d(89cm, 185cm, -1775cm) rotate3d(0.007, 0.995, 0.100, 3.276rad); "></model>
   </body>
 </html>
