Update Webspace world Banki Lobby

--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
     <meta name="webspace.environment.terrain.type" content="plains" />
     <meta name="webspace.environment.terrain.seed" content="7" />
   </head>
-  <body><img class="safum-vpn-status" id="5rvktjh" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" draggable="" style="transform: translate3d(205cm, 216cm, -1786cm) rotate3d(-0.000, 0.997, 0.081, 3.138rad); " loading="lazy" />
-    <img class="safum-vpn-status" id="0pos2da" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" draggable="" style="transform: translate3d(205cm, 216cm, -1786cm) rotate3d(-0.000, 0.997, 0.081, 3.138rad); " loading="lazy" />
-    <img class="safum-vpn-status" id="wzad3yp" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" draggable="" style="transform: translate3d(205cm, 216cm, -1786cm) rotate3d(-0.000, 0.997, 0.081, 3.138rad); " loading="lazy" />
+  <body>
+
     0
     <meta charset="UTF-8" id="lwwcepw" draggable="" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" id="198ubdy" draggable="" />
@@ -53,16 +52,15 @@
     <meta name="webspace.environment.terrain.seed" content="7" id="dhydhao" draggable="" />
     <meta name="webspace.environment.spawn_point.transform" content="translate3d(40cm, 75cm, -2159cm) rotate3d(-0.198, -0.980, -0.010, 0.106rad)" id="s9xzd0i" draggable="" />
     <meta name="webspace.environment.spawn_point.radius" content="0" id="dwxj6rl" draggable="" />
-    <img class="safum-vpn-status" id="hpbuh5l" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" draggable="" style="transform: translate3d(205cm, 216cm, -1786cm) rotate3d(-0.000, 0.997, 0.081, 3.138rad); " loading="lazy" />
     <h1 id="rxyjvgr" draggable="">Welcome to Banki!</h1>
     <h3 id="kjqe3dg" draggable="">All included experiences are to purely demonstrate the capabilities and usecases of banki</h3>
     <label id="ls4u6kz" contenteditable="" draggable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(68cm, 340cm, -2511cm) rotate3d( 0,  0,  0, 0rad); ">
       <h1>Welcome to Banki!</h1>
     </label>
     <model id="oqc1n4q" type="model/vnd.svox" src="assets/wall-361716.svox" style="transform: translate3d(102cm, 220cm, -2509cm) rotate3d(0,0,0,0rad); "></model>
-    <model id="pup1iws" type="model/vnd.svox" src="assets/wallback-75429.svox" draggable="" style="transform: translate3d(85cm, 224cm, -1900cm) rotate3d(-0.000, 1.000, 0.022, 3.113rad); "></model>
-    <model id="f2gla6x" type="model/vnd.svox" src="assets/wallback-67218.svox" draggable="" style="transform: translate3d(89cm, 185cm, -1775cm) rotate3d(0.007, 0.995, 0.100, 3.276rad); "></model>
-    <model id="uxvwm7f" type="model/vnd.svox" src="assets/wallback-968581.svox" draggable="" style="transform: translate3d(56cm, 222cm, -1768cm) rotate3d(0.000, 1.000, 0.026, 3.142rad); "></model>
-    <model id="latpas5" type="model/vnd.svox" src="assets/wallback-76126.svox" draggable="" style="transform: translate3d(1cm, 199cm, -2035cm) rotate3d(0.006, 0.997, 0.072, 3.317rad); "></model>
+
+
+
+    <model id="jjc14kn" type="model/vnd.svox" src="assets/wallback-57070.svox" draggable="" style="transform: translate3d(74cm, 263cm, -1827cm) rotate3d(0.001, 0.998, -0.057, 3.104rad); "></model>
   </body>
 </html>
