Update Webspace world Banki Lobby

--- a/index.html
+++ b/index.html
@@ -61,5 +61,6 @@
 
 
 
+    <model id="mk6of3h" type="model/vnd.svox" src="assets/wallback-659393.svox" draggable="" style="transform: translate3d(187cm, 213cm, -1635cm) rotate3d(0.001, 0.999, 0.045, 3.189rad); "></model>
   </body>
 </html>
