Update Webspace world Banki Lobby

--- a/index.html
+++ b/index.html
@@ -59,6 +59,6 @@
     </label>
     <model id="oqc1n4q" type="model/vnd.svox" src="assets/wall-361716.svox" style="transform: translate3d(102cm, 220cm, -2509cm) rotate3d(0,0,0,0rad); "></model>
 
-    <model id="jjc14kn" type="model/vnd.svox" src="assets/wallback-57070.svox" draggable="" style="transform: translate3d(74cm, 263cm, -1827cm) rotate3d(0.001, 0.998, -0.057, 3.104rad); "></model>
+    <model id="jjc14kn" type="model/vnd.svox" src="assets/wallback-57070.svox" draggable="" style="transform: translate3d(74cm, 263cm, -1827cm) scale3d(1.00, 1.00, 1.00); "></model>
   </body>
 </html>
