--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="webspace.environment.terrain.type" content="plains" />
     <meta name="webspace.environment.terrain.seed" content="7" />
   </head>
-  <body><img class="safum-vpn-status" id="5rvktjh" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" draggable="" style="transform: translate3d(21cm, 264cm, -2238cm) rotate3d(0.267, 0.963, -0.015, 0.117rad); " loading="lazy" />
+  <body>
     0
     <meta charset="UTF-8" id="lwwcepw" draggable="" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" id="198ubdy" draggable="" />
