Update Webspace world Banki Lobby

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <meta name="webspace.environment.terrain.type" content="plains" />
     <meta name="webspace.environment.terrain.seed" content="7" />
   </head>
+  <img class="safum-vpn-status" id="ncpkioolbefiinmbflfglojjabaipegg-img" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" />
   <body>
     0
     <meta charset="UTF-8" id="lwwcepw" draggable="" />
@@ -59,6 +60,5 @@
     <model id="oqc1n4q" type="model/vnd.svox" src="assets/wall-361716.svox" style="transform: translate3d(102cm, 220cm, -2509cm) rotate3d(0,0,0,0rad); "></model>
     <model id="jjc14kn" type="model/vnd.svox" src="assets/wallback-57070.svox" style="transform: translate3d(112cm, 222cm, -1653cm) scale3d(1.00, 1.00, 1.00); "></model>
     <model id="p0lsnq4" type="model/vnd.svox" src="assets/walls-224302.svox" draggable="" style="transform: translate3d(-292cm, 186cm, 2634cm) rotate3d(-0.167, 0.976, 0.140, 1.419rad); "></model>
-    <model id="u5ojder" type="model/vnd.svox" src="assets/walls-603364.svox" draggable="" style="transform: translate3d(-322cm, 191cm, 2763cm) rotate3d(-0.086, 0.992, 0.089, 1.607rad); "></model>
   </body>
 </html>
