Update Webspace world Banki Lobby

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <meta name="webspace.environment.terrain.type" content="plains" />
     <meta name="webspace.environment.terrain.seed" content="7" />
   </head>
-  <img class="safum-vpn-status" id="ncpkioolbefiinmbflfglojjabaipegg-img" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" />
-  <body>
+  <body><img class="safum-vpn-status" id="5rvktjh" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" draggable="" style="transform: translate3d(-284cm, 247cm, 2716cm) rotate3d(-0.018, 1.000, 0.018, 1.562rad); " loading="lazy" />
     0
     <meta charset="UTF-8" id="lwwcepw" draggable="" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" id="198ubdy" draggable="" />
@@ -59,7 +58,6 @@
     </label>
     <model id="oqc1n4q" type="model/vnd.svox" src="assets/wall-361716.svox" style="transform: translate3d(102cm, 220cm, -2509cm) rotate3d(0,0,0,0rad); "></model>
     <model id="jjc14kn" type="model/vnd.svox" src="assets/wallback-57070.svox" style="transform: translate3d(112cm, 222cm, -1653cm) scale3d(1.00, 1.00, 1.00); "></model>
-
     <model id="st31b9t" type="model/vnd.svox" src="assets/walls-536097.svox" draggable="" style="transform: translate3d(-316cm, 247cm, 2552cm) rotate3d(0.024, 0.999, -0.023, 1.512rad); "></model>
   </body>
 </html>
