Update Webspace world Banki Lobby

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <meta name="webspace.environment.terrain.colors.water" content="#080170" />
     <meta name="webspace.environment.terrain.type" content="plains" />
     <meta name="webspace.environment.terrain.seed" content="7" />
+    <meta name="webspace.keys.owner" content="eyJjcnYiOiJQLTI1NiIsImV4dCI6dHJ1ZSwia2V5X29wcyI6WyJ2ZXJpZnkiXSwia3R5IjoiRUMiLCJ4IjoiQlVBbkVOUzlvTHJuSzNHdlpSSWVPc1Z2bGRFZHFTTEtXQjktSDFBVDY1SSIsInkiOiJVWXF3alQyeXdiLTQ0LVdHRHNTNzl6NGdrOTYxNzVwRF9td0xiT0J6ekFVIiwiaHViX2lkIjoiRW5LOVFOQ003aFl5Umt0cSJ9" />
   </head>
-  <img class="safum-vpn-status" id="ncpkioolbefiinmbflfglojjabaipegg-img" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" />
-  <body>
+  <body><img class="safum-vpn-status" id="5rvktjh" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" draggable="" loading="lazy" style="transform: translate3d(766cm, 260cm, 393cm); " />
     0
     <meta charset="UTF-8" id="lwwcepw" draggable="" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" id="198ubdy" draggable="" />
@@ -38,7 +38,6 @@
         background-color: #061139;
       }
     </style>
-    <meta name="webspace.keys.owner" content="eyJjcnYiOiJQLTI1NiIsImV4dCI6dHJ1ZSwia2V5X29wcyI6WyJ2ZXJpZnkiXSwia3R5IjoiRUMiLCJ4IjoiVy1zY2pQbVByME12Nm0wYXpEMG5zVzBLLUd0b2NtSDF4MU9kRGdKcnFOOCIsInkiOiIwakM2N2diY2F1d1B3VzB0TmI5Z2ZmRHBtS0pJRHNhNEFobkRIV0RRQ0c0IiwiaHViX2lkIjoiMjFQVjJRZUZIRnFpd2tEVCJ9" id="rtjb5sr" draggable="" />
     <meta name="webspace.environment.type" content="terrain" id="fsicktt" draggable="" />
     <meta name="webspace.environment.terrain.colors.ground" content="#B0E580" id="ya4xprc" draggable="" />
     <meta name="webspace.environment.terrain.colors.edge" content="#BA9384" id="q9rw4vx" draggable="" />
@@ -67,5 +66,42 @@
       <h1>Transaction Point</h1>
     </label>
     <img id="as0vzdg" loading="lazy" src="https://media1.tenor.com/images/08ad5208469647966c2afb98878457f7/tenor.gif?itemid=17419353" style="transform: translate3d(-345cm, 262cm, -1948cm) rotate3d(-0.001, -1.000, -0.001, 1.571rad) scale3d(5.11, 5.11, 5.11); " /><img id="9k9sia9" loading="lazy" src="https://media1.tenor.com/images/08ad5208469647966c2afb98878457f7/tenor.gif?itemid=17419353" style="transform: translate3d(575cm, 275cm, -1950cm) rotate3d(0.000, 1.000, 0.000, 1.571rad) scale3d(5.11, 5.11, 5.11); " />
+    <!-- Code injected by live-server -->
+    <script id="fwnp6y5" draggable="">
+      // &lt;![CDATA[  &lt;-- For SVG support
+      if ('WebSocket' in window) {
+        (function() {
+          function refreshCSS() {
+            var sheets = [].slice.call(document.getElementsByTagName("link"));
+            var head = document.getElementsByTagName("head")[0];
+            for (var i = 0; i & lt; sheets.length; ++i) {
+              var elem = sheets[i];
+              var parent = elem.parentElement || head;
+              parent.removeChild(elem);
+              var rel = elem.rel;
+              if (elem.href & amp; & amp; typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
+                var url = elem.href.replace(/(&amp;|\?)_cacheOverride=\d+/, '');
+                elem.href = url + (url.indexOf('?') & gt; = 0 ? '&amp;' : '?') + '_cacheOverride=' + (new Date().valueOf());
+              }
+              parent.appendChild(elem);
+            }
+          }
+          var protocol = window.location.protocol === 'http:' ? 'ws://' : 'wss://';
+          var address = protocol + window.location.host + window.location.pathname + '/ws';
+          var socket = new WebSocket(address);
+          socket.onmessage = function(msg) {
+            if (msg.data == 'reload') window.location.reload();
+            else if (msg.data == 'refreshcss') refreshCSS();
+          };
+          if (sessionStorage & amp; & amp; !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
+            console.log('Live reload enabled.');
+            sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
+          }
+        })();
+      } else {
+        console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
+      }
+      // ]]&gt;
+    </script>
   </body>
 </html>
