Update Webspace world Banki Lobby

--- a/index.html
+++ b/index.html
@@ -103,5 +103,7 @@
       }
       // ]]&gt;
     </script>
+    <model id="sla75i3" type="model/vnd.svox" src="assets/wallback-261303.svox" draggable="" style="transform: translate3d(1488cm, 218cm, 2450cm) rotate3d(0.000, 1.000, 0.000, 1.571rad); "></model>
+    <model id="b063qjp" type="model/vnd.svox" src="assets/wallback-374036.svox" draggable="" style="transform: translate3d(-1050cm, 232cm, 2375cm) rotate3d(0.000, -1.000, 0.000, 1.571rad); "></model>
   </body>
 </html>
