Update Webspace world Banki Lobby

--- a/index.html
+++ b/index.html
@@ -106,5 +106,6 @@
     <model id="sla75i3" type="model/vnd.svox" src="assets/wallback-261303.svox" draggable="" style="transform: translate3d(1488cm, 218cm, 2450cm) rotate3d(0.000, 1.000, 0.000, 1.571rad); "></model>
     <model id="b063qjp" type="model/vnd.svox" src="assets/wallback-374036.svox" draggable="" style="transform: translate3d(-1188cm, 232cm, 2413cm) rotate3d(0.000, -1.000, 0.000, 1.571rad); "></model>
     <model id="ce6z60g" type="model/vnd.svox" src="assets/bankhub-287276.svox" draggable="" style="transform: translate3d(113cm, 227cm, 2075cm) rotate3d(-0.555, -0.832, -0.014, 0.060rad); "></model>
+    <model id="pbto9lg" type="model/vnd.svox" src="assets/bankhub-107497.svox" draggable="" style="transform: translate3d(203cm, 184cm, 2456cm) rotate3d(-0.971, -0.237, -0.024, 0.211rad); "></model>
   </body>
 </html>
