--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="black" />
     <title>Banki Lobby</title>
     <meta name="webspace.environment.type" content="terrain" />
-    <meta name="webspace.environment.terrain.colors.ground" content="#152D01" />
+    <meta name="webspace.environment.terrain.colors.ground" content="#C2C2C2" />
     <meta name="webspace.environment.terrain.colors.edge" content="#082300" />
     <meta name="webspace.environment.terrain.colors.leaves" content="#748E08" />
     <meta name="webspace.environment.terrain.colors.bark" content="#2F2014" />
@@ -17,10 +17,9 @@
     <meta name="webspace.environment.terrain.colors.water" content="#080170" />
     <meta name="webspace.environment.terrain.type" content="plains" />
     <meta name="webspace.environment.terrain.seed" content="7" />
-    <meta name="webspace.keys.owner" content="eyJjcnYiOiJQLTI1NiIsImV4dCI6dHJ1ZSwia2V5X29wcyI6WyJ2ZXJpZnkiXSwia3R5IjoiRUMiLCJ4IjoiVy1zY2pQbVByME12Nm0wYXpEMG5zVzBLLUd0b2NtSDF4MU9kRGdKcnFOOCIsInkiOiIwakM2N2diY2F1d1B3VzB0TmI5Z2ZmRHBtS0pJRHNhNEFobkRIV0RRQ0c0IiwiaHViX2lkIjoiMjFQVjJRZUZIRnFpd2tEVCJ9" />
+    <meta name="webspace.keys.owner" content="eyJjcnYiOiJQLTI1NiIsImV4dCI6dHJ1ZSwia2V5X29wcyI6WyJ2ZXJpZnkiXSwia3R5IjoiRUMiLCJ4IjoiQlVBbkVOUzlvTHJuSzNHdlpSSWVPc1Z2bGRFZHFTTEtXQjktSDFBVDY1SSIsInkiOiJVWXF3alQyeXdiLTQ0LVdHRHNTNzl6NGdrOTYxNzVwRF9td0xiT0J6ekFVIiwiaHViX2lkIjoiRW5LOVFOQ003aFl5Umt0cSJ9" />
   </head>
-  <img class="safum-vpn-status" id="ncpkioolbefiinmbflfglojjabaipegg-img" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" />
-  <body><img class="safum-vpn-status" id="5rvktjh" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" draggable="" loading="lazy" style="" />
+  <body>
     0
     <meta charset="UTF-8" id="lwwcepw" draggable="" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" id="198ubdy" draggable="" />
@@ -54,13 +53,13 @@
     <meta name="webspace.environment.spawn_point.radius" content="0" id="dwxj6rl" draggable="" />
     <h1 id="rxyjvgr" draggable="">Welcome to Banki!</h1>
     <h3 id="kjqe3dg" draggable="">All included experiences are to purely demonstrate the capabilities and usecases of banki</h3>
-    <label id="ls4u6kz" contenteditable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(68cm, 340cm, -2511cm) rotate3d( 0,  0,  0, 0rad); ">
+    <label id="ls4u6kz" contenteditable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(68cm, 340cm, -2511cm) scale3d(1.62, 1.62, 1.62); ">
       <h1>Welcome to Banki!</h1>
     </label>
     <model id="oqc1n4q" type="model/vnd.svox" src="assets/wall-361716.svox" style="transform: translate3d(102cm, 220cm, -2509cm) rotate3d(0,0,0,0rad); "></model>
     <model id="jjc14kn" type="model/vnd.svox" src="assets/wallback-57070.svox" style="transform: translate3d(112cm, 222cm, -1653cm) scale3d(1.00, 1.00, 1.00); "></model>
-    <model id="st31b9t" type="model/vnd.svox" src="assets/walls-536097.svox" style="transform: translate3d(-881cm, 225cm, 2441cm) rotate3d(0.000, 1.000, 0.000, 1.571rad); " draggable=""></model>
-    <model id="9hhcq3z" type="model/vnd.svox" src="https://arceusmaxis.github.io/banki/assets/walls-95479.svox" draggable="" style="transform: translate3d(1057cm, 230cm, 2458cm) rotate3d(0.000, 1.000, -0.000, 1.571rad) scale3d(0.95, 0.95, 0.95); "></model>
+    <model id="st31b9t" type="model/vnd.svox" src="assets/walls-536097.svox" style="transform: translate3d(-881cm, 225cm, 2441cm) rotate3d(0.000, 1.000, 0.000, 1.571rad); "></model>
+    <model id="9hhcq3z" type="model/vnd.svox" src="https://arceusmaxis.github.io/banki/assets/walls-95479.svox" style="transform: translate3d(1057cm, 230cm, 2458cm) rotate3d(0.000, 1.000, -0.000, 1.571rad) scale3d(0.95, 0.95, 0.95); "></model>
     <label id="2cl4feg" contenteditable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(-350cm, 413cm, 2438cm) rotate3d(-0.009, 1.000, 0.009, 1.624rad) scale3d(1.51, 1.51, 1.51); ">
       <h1>Grievance Addressal</h1>
     </label><label id="cthomfd" contenteditable="" style="color: black; width: min-content; height: min-content; background-color: white; font-family: sans-serif; transform: translate3d(588cm, 400cm, 2400cm) rotate3d(-0.063, -0.996, -0.062, 1.551rad) scale3d(1.53, 1.53, 1.53); ">
@@ -69,20 +68,20 @@
     <img id="as0vzdg" loading="lazy" src="https://media1.tenor.com/images/08ad5208469647966c2afb98878457f7/tenor.gif?itemid=17419353" style="transform: translate3d(-345cm, 262cm, -1948cm) rotate3d(-0.001, -1.000, -0.001, 1.571rad) scale3d(5.11, 5.11, 5.11); " /><img id="9k9sia9" loading="lazy" src="https://media1.tenor.com/images/08ad5208469647966c2afb98878457f7/tenor.gif?itemid=17419353" style="transform: translate3d(575cm, 275cm, -1950cm) rotate3d(0.000, 1.000, 0.000, 1.571rad) scale3d(5.11, 5.11, 5.11); " />
     <!-- Code injected by live-server -->
     <script id="fwnp6y5" draggable="">
-      // &amp;lt;![CDATA[  &amp;lt;-- For SVG support
+      // &lt;![CDATA[  &lt;-- For SVG support
       if ('WebSocket' in window) {
         (function() {
           function refreshCSS() {
             var sheets = [].slice.call(document.getElementsByTagName("link"));
             var head = document.getElementsByTagName("head")[0];
-            for (var i = 0; i & amp; lt; sheets.length; ++i) {
+            for (var i = 0; i & lt; sheets.length; ++i) {
               var elem = sheets[i];
               var parent = elem.parentElement || head;
               parent.removeChild(elem);
               var rel = elem.rel;
-              if (elem.href & amp; amp; & amp; amp; typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
-                var url = elem.href.replace(/(&amp;amp;|\?)_cacheOverride=\d+/, '');
-                elem.href = url + (url.indexOf('?') & amp; gt; = 0 ? '&amp;amp;' : '?') + '_cacheOverride=' + (new Date().valueOf());
+              if (elem.href & amp; & amp; typeof rel != "string" || rel.length == 0 || rel.toLowerCase() == "stylesheet") {
+                var url = elem.href.replace(/(&amp;|\?)_cacheOverride=\d+/, '');
+                elem.href = url + (url.indexOf('?') & gt; = 0 ? '&amp;' : '?') + '_cacheOverride=' + (new Date().valueOf());
               }
               parent.appendChild(elem);
             }
@@ -94,7 +93,7 @@
             if (msg.data == 'reload') window.location.reload();
             else if (msg.data == 'refreshcss') refreshCSS();
           };
-          if (sessionStorage & amp; amp; & amp; amp; !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
+          if (sessionStorage & amp; & amp; !sessionStorage.getItem('IsThisFirstTime_Log_From_LiveServer')) {
             console.log('Live reload enabled.');
             sessionStorage.setItem('IsThisFirstTime_Log_From_LiveServer', true);
           }
@@ -102,7 +101,12 @@
       } else {
         console.error('Upgrade your browser. This Browser is NOT supported WebSocket for Live-Reloading.');
       }
-      // ]]&amp;gt;
+      // ]]&gt;
     </script>
+    <model id="sla75i3" type="model/vnd.svox" src="assets/wallback-261303.svox" draggable="" style="transform: translate3d(1488cm, 218cm, 2450cm) rotate3d(0.000, 1.000, 0.000, 1.571rad); "></model>
+    <model id="b063qjp" type="model/vnd.svox" src="assets/wallback-374036.svox" draggable="" style="transform: translate3d(-1050cm, 232cm, 2413cm) rotate3d(0.000, -1.000, 0.000, 1.571rad); "></model>
+    <model id="ce6z60g" type="model/vnd.svox" src="assets/bankhub-287276.svox" draggable="" style="transform: translate3d(113cm, 227cm, 2075cm) rotate3d(-0.555, -0.832, -0.014, 0.060rad); "></model>
+    <model id="pbto9lg" type="model/vnd.svox" src="assets/bankhub-107497.svox" style="transform: translate3d(174cm, 302cm, 909cm) scale3d(1.07, 1.07, 1.07); "></model>
+    <model id="9auqh30" type="model/vnd.svox" src="assets/wallback-374036.svox" style="transform: translate3d(-702cm, 237cm, 1977cm) rotate3d(-0.000, 1.000, -0.000, 3.142rad); "></model><img id="4mjc58v" loading="lazy" src="https://media1.tenor.com/images/08ad5208469647966c2afb98878457f7/tenor.gif?itemid=17419353" style="transform: translate3d(-350cm, 263cm, -3168cm) rotate3d(0.002, 1.000, -0.005, 1.570rad) scale3d(4.87, 4.87, 4.87); " /><img id="im20jaq" loading="lazy" src="https://media1.tenor.com/images/08ad5208469647966c2afb98878457f7/tenor.gif?itemid=17419353" style="transform: translate3d(588cm, 263cm, -3175cm) rotate3d(0.000, -1.000, 0.000, 1.571rad) scale3d(4.87, 4.87, 4.87); " />
   </body>
 </html>
