Update Webspace world Banki Lobby

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="webspace.environment.spawn_point.transform" content="translate3d(154cm, 75cm, -2044cm) rotate3d(-0.987, 0.134, 0.084, 1.130rad)" />
     <meta name="webspace.environment.spawn_point.radius" content="10" />
   </head>
-  <body><img class="safum-vpn-status" id="5rvktjh" src="chrome-extension://ncpkioolbefiinmbflfglojjabaipegg/web_accessible_resources/status_on.png" alt="status" draggable="" loading="lazy" style="transform: translate3d(169cm, 246cm, -2400cm) rotate3d(0.000, 1.000, 0.021, 3.186rad); " />
+  <body>
     0
     <meta charset="UTF-8" id="lwwcepw" draggable="" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" id="198ubdy" draggable="" />
